--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "all": "\"cd ../live-fanatic-backend && npm run dev\" && \"npm run dev\""
   },
   "dependencies": {
     "react": "^18.2.0",
