--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "all": "\"cd ../live-fanatic-backend && npm run dev\" && \"npm run dev\""
+    "all": "concurrently \"cd ./live-fanatic-backend && npm run dev\" \"npm run dev\""
   },
   "dependencies": {
     "react": "^18.2.0",
