--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.8",
     "react-router-dom": "^6.3.0",
     "react-to-print": "^2.14.7"
   },
